working on travis integration

--- a/test/index.html
+++ b/test/index.html
@@ -2,11 +2,14 @@
 <html>
 	<head>
 		<title>jsTreeStructure Test Runner</title>
+		<meta charset="utf-8">
+		<!-- QUnit includes -->
 		<link rel="stylesheet" href="vendor/css/qunit.css" />
-		<script src="../src/init-config.js"></script>
-		<script src="../src/vendor/js/require.js" data-main="init.js"></script>
+		<script src="../src/vendor/js/qunit.js"></script>
 	</head>
 	<body>
 		<div id="qunit"></div>
+		<div id="qunit-fixture"></div>
+		<script src="../src/vendor/js/require.js" data-main="init.js"></script>
 	</body>
 </html>
