--- a/test/index.html
+++ b/test/index.html
@@ -4,14 +4,11 @@
 		<title>jsTreeStructure Test Runner</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css" />
+		<script src="../bower_components/qunit/qunit/qunit.js"></script>
 	</head>
 	<body>
 		<div id="qunit"></div>
 		<div id="qunit-fixture"></div>
-		<script src="../src/tree.js"></script>
-		<script src="../bower_components/underscore/underscore.js"></script>
-		<script src="../bower_components/qunit/qunit/qunit.js"></script>
-		<script src="qunit-extend.js"></script>
-		<script src="suites/basic.js"></script>
+		<script src="../bower_components/requirejs/require.js" data-main="init.js"></script>
 	</body>
 </html>
